--- a/todofirst/manifest.yml
+++ b/todofirst/manifest.yml
@@ -5,4 +5,4 @@ applications:
   memory: 512M
   buildpack: https://github.com/cloudfoundry/java-buildpack
   instances: 1
-  path: target/todofirst-0.0.1-SNAPSHOT.war
+  path: target/todofirst-0.0.1-SNAPSHOT.jar
